@startuml
skinparam Style strictuml
skinparam classAttributeIconSize 0
skinparam shadowing false
hide empty members

package "Enums" {
  enum GameState {
    START
    PLAYING
    PAUSED
    GAME_OVER
    WIN
  }

  enum Difficulty {
    EASY
    NORMAL
    HARD
  }

  enum SessionState {
    WAITING_FOR_PLAYERS
    LOADING
    PLAYING
    WAITING_FOR_RESTART_CONFIRMATION
    RESTARTING
    SESSION_CLOSED
    DISCONNECTED
  }

  enum Direction {
    None
    Up
    Down
    Left
    Right
  }

  enum AnimationState {
    Idle
    MovingUp
    MovingDown
    MovingLeft
    MovingRight
    Dying
  }

  enum CellType {
    Empty
    Wall
    TriggerWall
    HiddenWall
    Coin
    TreasureRoom
    ClueTrigger
    Player
    Corridor
    Chamber
  }
}

package "Networking" {
  enum MsgType {
    Handshake
    JoinRequest
    Move
    StateSync
    Ping
    Pong
    SessionRejected
    ReadyAck
    RestartReady
    SessionStateMsg
    PeerDisconnected
    Unknown
  }

  class GameMessage <<struct>> {
    + type : MsgType
    + seq : quint32
    + payload : QJsonObject
    + toJson() : QString
    + fromJson(raw, out) : bool
  }
}

package "Core" {
  abstract class GameObject {
    # m_x : int
    # m_y : int
    {abstract} + getType() : QString
    {abstract} + draw(painter, cellSize)
  }

  class Chamber <<struct>> {
    + id : int
    + x : int
    + y : int
    + width : int
    + height : int
    + coinPositions : QVector<QPoint>
    + hasEnemy : bool
    + enemyPos : QPoint
    + hasTreasureRoom : bool
    + treasurePos : QPoint
    + centre() : QPoint
  }

  class InteractionResult <<struct>> {
    + scoreDelta : int
    + coinCollected : bool
    + coinsCollectedTotal : int
    + revealedClues : QStringList
    + wallOpened : bool
    + triggerActivated : bool
    + treasureUnlocked : bool
    + won : bool
  }

  class Level {
    - m_name : QString
    - m_width : int
    - m_height : int
    - m_timeLimit : int
    - m_spawnX : int
    - m_spawnY : int
    - m_chambers : QVector<Chamber>
    + isWalkable(x, y) : bool
    + canPlayerEnter(x, y, player, outReason) : bool
    + interactAt(x, y, player, clues) : InteractionResult
  }

  class Game {
    - m_state : GameState
    - m_difficulty : Difficulty
    - m_score : int
    - m_timeRemaining : int
    - m_currentLevelIndex : int
    - m_multiplayerMode : bool
    - m_sessionState : SessionState
    - m_localPlayerIndex : int
    + startNewGame(diff)
    + startMultiplayerMode()
    + hostMultiplayerSession(port)
    + joinMultiplayerSession(host, port)
    + startLevel(levelIndex, diff)
    + restartLevel()
    + nextLevel()
    + saveGame(filepath)
    + loadGame(filepath) : bool
    + handleInput(dir)
    + handleInputForPlayer(playerIndex, dir)
    + pause()
    + resume()
    + coinsToUnlock() : int
    <<signals>>
    + sessionStateChanged(stateInt)
    + peerDisconnected(reason)
    + sessionRejected(reason)
    + coinCollected(total)
  }

  class NetState <<PIMPL>> {
    + io : boost::asio::io_context
    + socket : std::shared_ptr<tcp::socket>
  }

  class AIHelper {
    + generateHint(level, player) : QString
  }
}

package "Gameplay" {
  class Player {
    - m_coinsCollected : int
    - m_coinsRequired : int
    - m_isMoving : bool
    + updateMovement(dt)
    + move(dir, level)
    + advanceAnimation()
    + setCoinsRequired(n)
    + canEnterTreasureRoom() : bool
  }

  class PlayerAnimator {
    + advance()
  }

  class Enemy {
    - m_animState : AnimationState
    - m_animFrame : int
    + update(level, player)
    + advanceAnimation()
    + setDying()
    + isDead() : bool
  }

  class Coin
  class Wall
  class TriggerWall
  class HiddenWall
  class TreasureRoom
  class ClueTrigger
}

package "Systems" {
  class LevelLoader {
    + loadFromJson(filePath) : Level
    + generateProcedural(seed, diff, context) : Level
    + getAvailableLevels(levelsDir) : QStringList
  }

  class DifficultyConfig {
    + loadFromJson(filePath) : DifficultyConfig
    + selectProfile(diff, seed, runIndex) : DifficultyProfile
  }

  class ProceduralGenerationRules <<struct>> {
    + startingTime : int
    + coinsRequired : int
  }

  class ClueManager {
    + loadClues(cluesArray)
    + checkCoinClues(coinsCollected) : QStringList
    + checkPositionClue(x, y) : QStringList
  }

  class InputHandler {
    + keyToDirection(qtKey) : Direction
  }

  class SpriteManager {
    + load(key, filePath)
    + drawWall(wall, p, cellSize) : bool
    + drawPlayer(player, p, cellSize) : bool
    + drawEnemy(enemy, p, cellSize) : bool
  }
}

package "UI" {
  class MainMenu
  class GameWindow {
    - m_displayedCoins : int
    - m_coinsToUnlock : int
    - m_bgCache : QPixmap
    + onCoinCollected(total)
    + onSessionStateChanged(stateInt)
    + onPeerDisconnected(reason)
    + onSessionRejected(reason)
  }
  class GameScreen
  class PauseOverlay
  class GameOverOverlay {
    + setMultiplayerWaiting(bool)
  }
}

GameObject <|-- Player
GameObject <|-- Enemy
GameObject <|-- Coin
GameObject <|-- Wall
Wall <|-- TriggerWall
Wall <|-- HiddenWall
GameObject <|-- TreasureRoom
GameObject <|-- ClueTrigger

Player *-- PlayerAnimator
Player ..> SpriteManager
Enemy ..> SpriteManager

GameWindow *-- Game
Game *-- Level
Game *-- Player
Game *-- AIHelper
Game *-- NetState
Game ..> ClueManager
Game ..> LevelLoader
Game ..> GameState
Game ..> Difficulty
Game ..> SessionState
Game ..> GameMessage

Level *-- Chamber
Level *-- Enemy
Level *-- Coin
Level *-- Wall
Level *-- TriggerWall
Level *-- HiddenWall
Level *-- TreasureRoom
Level *-- ClueTrigger

DifficultyConfig ..> ProceduralGenerationRules

InputHandler ..> Direction

@enduml
